--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mobit">
-        <activity android:name=".FirstSettingActivity"></activity>
+        <activity
+            android:name=".PopupResetConfirmActivity"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity android:name=".FirstSettingActivity" />
         <activity
             android:name=".PopupBuySellActivity"
             android:theme="@android:style/Theme.Dialog" />
